@@ -46,15 +46,19 @@ MP_INT * otoi(object x);
 #error Need alloca for GMP
 #endif
 
+/* Add fourth argument af to the SETQ macros to allow for malloc allocation */
+/* inside setjmp frames, and faster alloca allocation otherwise.*/
+/* FIXME, verify that IDECL need not be changed, improve logic behind malloc */
+/* selection, e.g. closure boundaries.  CM 20031201*/
 #define IDECL(a,b,c) mp_limb_t *c=(mp_limb_t *)alloca(1*sizeof(mp_limb_t));MP_INT b={1,1,c}; a = &b 
-#define SETQ_IO(var,alloc,val) { object _xx = (val); \
-                                 int _n; \
-                                 if ((_n=obj_to_mpz(_xx,(var)))) {\
-                                   obj_to_mpz1(_xx,(var),alloca(_n));}}
-#define SETQ_II(var,alloc,val) { MP_INT * _xx = (val); \
-                                 int _n; \
-                                 if ((_n=mpz_to_mpz(_xx,(var)))) {\
-                                   mpz_to_mpz1(_xx,(var),alloca(_n));}}
+#define SETQ_IO(var,alloc,val,af) { object _xx = (val); \
+                                    int _n; \
+                                    if ((_n=obj_to_mpz(_xx,(var)))) {\
+                                      obj_to_mpz1(_xx,(var),af(_n));}}
+#define SETQ_II(var,alloc,val,af) { MP_INT * _xx = (val); \
+                                    int _n; \
+                                    if ((_n=mpz_to_mpz(_xx,(var)))) {\
+                                      mpz_to_mpz1(_xx,(var),af(_n));}}
 #define ISETQ_FIX(a,b,c) isetq_fix(a,c)
 
 
